--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,6 +105,9 @@ body {
   * {
     @apply border-border;
   }
+  html {
+    font-size: 106.25%; /* (~17px if browser default is 16px) */
+  }
   body {
     @apply bg-background text-foreground;
     min-height: 100vh;
